Fix gojuuon table not centered

--- a/style/main.scss
+++ b/style/main.scss
@@ -75,7 +75,7 @@ body.dark {
 }
 
 #gojuuon {
-  display: inline;
+  display: inline-block;
   font-size: $text-biggest;
 
   th, td {
